--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,3 +1,20 @@
-.container
-	max-width: 950px
+@import 'variables' 
+@import 'blocks/header' 
+
+
+.container    
+	max-width: 1140px
 	margin: 0 auto
+
+.button
+    width: 300px
+    display: block
+    font-size: 18px
+    font-weight: 600
+    background-color: white
+    border-radius: 25px    
+    text-align: center
+    color: $main-color
+    padding: 10px 40px
+    text-decoration: none!important
+
