--- a/src/sass/blocks/_header.sass
+++ b/src/sass/blocks/_header.sass
@@ -1,18 +1,17 @@
 .header
     background: $main-color
     color: #ffffff
-    min-height: 570px
+    min-height: 600px
     &__wrapper            
-        position: relative
-        margin: 0
+        position: relative        
+        padding-top: 90px 
         img
             position: absolute
-            right: 50px
-            top: 0
+            right: 0
+            top: 40px
     &__title
-        font-size: 45px
-        font-weight: 700                  
-        padding-top: 70px     
+        font-size: 60px
+        font-weight: 600    
     &__subtitle
         color: #d1d3e4
         margin: 20px 0 
