--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,6 @@
 @import 'variables' 
 @import 'blocks/header' 
-
+@import 'blocks/service' 
 
 .container    
 	max-width: 1140px
@@ -9,12 +9,26 @@
 .button
     width: 300px
     display: block
-    font-size: 18px
+    font-size: 16px
     font-weight: 600
     background-color: white
     border-radius: 25px    
     text-align: center
     color: $main-color
     padding: 10px 40px
+    margin-top: 25px
     text-decoration: none!important
+    &:hover
+        font-weight: 700
+    &_service
+        background: $main-color
+        color: #ffffff
+        &:hover
+            color: #ffffff
 
+
+.title
+    color: #212529
+    font-weight: 600
+    font-size: 40px
+    margin-bottom: 20px
