added facts block

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,6 +2,8 @@
 @import 'blocks/header' 
 @import 'blocks/service' 
 @import 'blocks/about' 
+@import 'blocks/facts'
+@import 'blocks/cta'
 
 *
     font-size: 16px
@@ -29,6 +31,13 @@
         margin-top: 45px
         &:hover
             color: #ffffff
+    &_white
+        background: #ffffff  
+        margin: 0 auto
+        margin-top: 40px
+        &:hover
+            color: $main-color
+
 
 
 .title
