--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,6 +4,7 @@
 @import 'blocks/about' 
 @import 'blocks/facts'
 @import 'blocks/cta'
+@import 'blocks/footer'
 
 *
     font-size: 16px
@@ -37,6 +38,19 @@
         margin-top: 40px
         &:hover
             color: $main-color
+    &_sumbit
+        background: $accent-color
+        width: 240px
+        display: block
+        font-size: 16px
+        font-weight: 600
+        border-radius: 25px    
+        text-align: center
+        color: #ffffff 
+        padding: 10px 40px    
+        margin-top: 25px
+        border: none
+        text-decoration: none!important
 
 
 
@@ -49,3 +63,6 @@
         font-size: 40px
         color: $main-color
         font-weight: 600
+
+.copy
+    font-size: 14px 
