--- a/src/sass/blocks/_nav.sass
+++ b/src/sass/blocks/_nav.sass
@@ -4,20 +4,23 @@
     top: 0
     left: 0
     right: 0
-    transition: all .3 ease-in-out
+    transition: all 0.1s linear
     z-index: 2
     .logo        
         width: 138px
         height: 43px
         padding: 0 20px
         background: url('../img/Logo_white.png') center (center/cover) no-repeat
+        &-black
+            background: url('../img/Logo.png') center (center/cover) no-repeat    
     .wrapper 
         display: flex
         justify-content: space-between
         align-items: center
-        padding: 20px 0
-        transition: all .3 ease-in-out        
+        padding: 10px 40px   
+
     ul
+        margin-top: 15px
         display: flex
         list-style-type: none
         align-items: center
@@ -25,17 +28,28 @@
     a
         color: #bbbdd7
         text-decoration: none
-        padding: 7px 15px
-        transition: all .3 ease-in-out
+        padding: 7px 25px
+        font-weight: 700
         .current, &:hover
             color: #fff
+    .phone
+        border: 2px solid  #ffffff
+        border-radius: 25px
+        &:hover
+            background: #ffffff
+            color: $accent-color
     &-active
         background: #ffffff
-        box-shadow: 0 2px 10px rgba(0,0,0,0.2)
+        box-shadow: 0 2px 10px #57303033       
+        
+        a
+            padding: 7px 25px
+            color: #000000       
+            .current, &:hover
+                color: $main-color
+        .phone
+            border: 2px solid  #000000
+            
 
-.nav.nav-active a
-    color: #000000
-    .current, &:hover
-            color: $main-color
-.nav.nav-active .container 
-    padding: 10px 0
+    
+
