added form handler, updated hrefs

--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -34,3 +34,9 @@
                 width: 230px
                 border: 1px solid #cccccc
                 padding: 0 15px
+        .thanks
+            display: none
+            padding: 0 0 20px 0
+            font-size: 14px
+            font-weight: 700
+            color: $main-color
