--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -20,6 +20,8 @@
         .email
             color: $main-color
             font-weight: 700
+        &-map
+            width: 500px
         &-form
             margin-top: 25px
             width: 250px
