--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -26,5 +26,95 @@
         &__wrapper         
             margin: 0 25px
     .copy
+        margin-left: 15px 
+@media (min-width: 957px) and (max-width: 1037px) 
+    .nav
+        a
+            font-size: 15px
+            padding: 7px 10px
+            font-weight: 700
+    .header
+        &__wrapper
+            margin: 0 25px
+            img
+                width: 60%
+        &__title
+            font-size: 50px   
+        &__subtitle
+    .service
+        &__wrapper         
+            margin: 0 25px
+    .about
+        &__wrapper         
+            margin: 0 25px
+            align-items: center
+        &__desc
+              width: 60%        
+        &__img
+            img
+                width: 90%
+                padding-left: 20px        
+    .facts  
+        &__wrapper         
+            margin: 0 25px
+    .cta 
+        &__wrapper         
+            margin: 0 25px
+    .footer
+        &__wrapper         
+            margin: 0 25px
+        &__item            
+            &-map
+                width: 370px 
+                padding: 5px
+    .copy
         margin-left: 15px
- 
+@media (min-width: 768px) and (max-width: 956px) 
+    .nav
+        ul
+            display: none
+    .header
+        &__wrapper
+            margin: 0 25px
+            img
+                width: 50%
+        &__title
+            font-size: 45px   
+    .service
+        &__wrapper         
+            margin: 0 25px            
+            flex-wrap: wrap
+            justify-content: space-between
+        &__item 
+            width: 45%
+            margin: 0             
+            margin-top: 55px
+            overflow: hidden 
+    .about
+        &__wrapper         
+            margin: 0 25px
+            flex-wrap: wrap
+            justify-content: center
+        &__desc
+              width: 100%        
+        &__img
+            img
+                width: 90% 
+                margin-top: 35px    
+    .facts  
+        &__wrapper         
+            margin: 0 25px
+    .cta 
+        &__wrapper         
+            margin: 0 25px
+    .footer
+        &__wrapper         
+            margin: 0 25px
+            flex-wrap: wrap
+            justify-content: space-around
+        &__item            
+            &-map
+                width: 400px 
+                padding: 5px
+    .copy
+        margin-left: 15px
