--- a/src/sass/blocks/_facts.sass
+++ b/src/sass/blocks/_facts.sass
@@ -10,7 +10,7 @@
         margin: 20px
         &-title
             display: flex
-            align-items: center
+            align-items: flex-start
             text-transform: uppercase
             font-weight: 700
             color: #4e4e4d
