--- a/src/sass/blocks/_footer.sass
+++ b/src/sass/blocks/_footer.sass
@@ -42,3 +42,6 @@
             font-size: 14px
             font-weight: 700
             color: $main-color
+    &__item:nth-child(3)
+            span
+                font-size: 20px
