--- a/src/sass/blocks/_nav.sass
+++ b/src/sass/blocks/_nav.sass
@@ -17,38 +17,123 @@
         display: flex
         justify-content: space-between
         align-items: center
-        padding: 10px 40px   
+        padding: 10px 40px  
 
-    ul
-        margin-top: 15px
-        display: flex
-        list-style-type: none
-        align-items: center
-        justify-content: center
-    a
-        color: #bbbdd7
-        text-decoration: none
-        padding: 7px 25px
-        font-weight: 700
-        .current, &:hover
-            color: #fff
-    .phone
-        border: 2px solid  #ffffff
-        border-radius: 25px
-        &:hover
-            background: #ffffff
-            color: $accent-color
+    &__main-menu
+        ul
+            margin-top: 15px
+            display: flex
+            list-style-type: none
+            align-items: center
+            justify-content: center
+        a
+            color: #bbbdd7
+            text-decoration: none
+            padding: 7px 25px
+            font-weight: 700
+            .current, &:hover
+                color: #fff
+        .phone
+            border: 2px solid  #ffffff
+            border-radius: 25px
+            &:hover
+                background: #ffffff
+                color: $accent-color
+
+    
+    //mobile nav
+    &__hamburger-menu
+        display: none
+        .phone
+            border: 2px solid  #ffffff
+            border-radius: 25px
+            color: #bbbdd7
+            text-decoration: none
+            padding: 7px 25px
+            font-weight: 700                 
+            margin-right: 50px
+            &:hover
+                background: #ffffff
+                color: $accent-color  
+        #menu__toggle 
+            opacity: 0
+            &:checked ~ .menu__btn > span 
+                transform: rotate(45deg)
+                &::before 
+                    top: 0
+                    transform: rotate(0)                
+                &::after 
+                    top: 0
+                    transform: rotate(90deg)
+            &:checked ~ .menu__box 
+                visibility: visible
+                right: 0
+        .menu__btn 
+            display: flex
+            align-items: center
+            position: fixed
+            top: 20px
+            right: 20px
+            width: 26px
+            height: 26px
+            cursor: pointer
+            z-index: 1       
+            > span, > span::before, > span::after 
+                display: block
+                position: absolute
+                width: 100%
+                height: 2px
+                background-color: #fff
+                transition-duration: .25s
+                
+            > span::before 
+                content: ''
+                top: -8px
+                
+            > span::after 
+                content: ''
+                top: 8px
+        .menu__box 
+            display: block
+            position: fixed
+            visibility: hidden
+            top: 63px
+            right: -100%
+            width: 100%
+            height: 100%
+            margin: 0
+            padding: 80px 0
+            list-style: none
+            background-color: #fff
+            box-shadow: 1px 0px 6px rgba(0, 0, 0, .2)
+            transition-duration: .25s
+
+        .menu__item 
+            display: block
+            padding: 12px 24px
+            color: #000000
+            font-size: 20px
+            font-weight: 600
+            text-decoration: none
+            border-bottom: 1px solid #000
+            transition-duration: .25s
+            &:hover 
+                color: red
+
     &-active
         background: #ffffff
-        box-shadow: 0 2px 10px #57303033       
-        
+        box-shadow: 0 2px 10px #57303033        
         a
             padding: 7px 25px
             color: #000000       
             .current, &:hover
                 color: $main-color
         .phone
+            color: #000 
             border: 2px solid  #000000
+        .menu__btn
+            > span, > span::before, > span::after
+                background-color: #000000
             
 
     
