--- a/src/sass/blocks/_nav.sass
+++ b/src/sass/blocks/_nav.sass
@@ -100,25 +100,24 @@
             top: 63px
             right: -100%
             width: 100%
-            height: 100%
-            margin: 0
-            padding: 80px 0
+            height: 100%         
             list-style: none
             background-color: #fff
             box-shadow: 1px 0px 6px rgba(0, 0, 0, .2)
-            transition-duration: .25s
+            transition-duration: .25s                      
 
         .menu__item 
-            display: block
-            padding: 12px 24px
-            color: #000000
+            display: block 
+            color: #252523
+            padding: 0 0 20px 0
+            margin: 20px 60px 20px 10px
             font-size: 20px
             font-weight: 600
             text-decoration: none
             border-bottom: 1px solid #000
             transition-duration: .25s
             &:hover 
-                color: red
+                color: #444444
 
     &-active
         background: #ffffff
