--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -8,8 +8,12 @@
 @import 'blocks/footer'
 @import 'media'
 
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,700&display=swap');
+
 *
     font-size: 16px
+    font-family: 'Source Sans Pro', sans-serif
+    font-weight: 400
 .container    
 	max-width: 1140px
 	margin: 0 auto
