--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -281,3 +281,6 @@
         &-active
             .phone
                 display: none
+        &__hamburger-menu
+            .phone
+                display: none
